--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created super-duper futuristic robots and pixie dust"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
